recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:9: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.14);
                ^HexaKoch:11: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.14);
                ^HexaKoch:13: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.14);
                ^HexaKoch:15: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.14);
                ^HexaKoch:17: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.14);
                ^HexaKoch:19: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.14);
                ^HexaKoch:21: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.14);
                ^